--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -584,29 +584,29 @@
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="nuevaPlaylistLabel" min="-2" max="-2" attributes="0"/>
                           <Component id="jSeparator5" max="32767" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="playlistNombre" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="playlistsGeneroLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="playlistGeneroInput" max="32767" attributes="0"/>
-                                  <Component id="playlistNombreInput" max="32767" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Component id="botonAgregarPlaylist" pref="295" max="32767" attributes="0"/>
+                          <Component id="botonAgregarPlaylist" max="32767" attributes="0"/>
                           <Component id="verCancionesPlaylistLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jSeparator7" alignment="0" max="32767" attributes="0"/>
                           <Component id="playlistsCombo" max="32767" attributes="0"/>
-                          <Component id="jScrollPane4" max="32767" attributes="0"/>
+                          <Component id="jScrollPane4" pref="298" max="32767" attributes="0"/>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="playlistNombre" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="playlistsProgramaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="playlistNombreInput" pref="243" max="32767" attributes="0"/>
+                                  <Component id="playlistProgramaComboBox" max="32767" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jScrollPane3" max="32767" attributes="0"/>
+                          <Component id="jScrollPane3" pref="534" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="listaPlaylistsLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="452" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="449" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -627,24 +627,24 @@
                               <Component id="jSeparator5" min="-2" pref="10" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="playlistsProgramaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="playlistProgramaComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="playlistNombre" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="playlistNombreInput" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="playlistsGeneroLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="playlistGeneroInput" alignment="3" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="botonAgregarPlaylist" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                               <Component id="verCancionesPlaylistLabel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jSeparator7" min="-2" pref="10" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="playlistsCombo" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jScrollPane4" pref="383" max="32767" attributes="0"/>
+                              <Component id="jScrollPane4" pref="391" max="32767" attributes="0"/>
                           </Group>
                           <Component id="jScrollPane3" max="32767" attributes="0"/>
                       </Group>
@@ -666,25 +666,18 @@
                 <Property name="text" type="java.lang.String" value="Nombre:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="playlistsGeneroLabel">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Genero:"/>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JTextField" name="playlistNombreInput">
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="playlistNombreInputActionPerformed"/>
-              </Events>
-            </Component>
-            <Component class="javax.swing.JTextField" name="playlistGeneroInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="playlistGeneroInputActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="botonAgregarPlaylist">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Agregar Playlist"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonAgregarPlaylistActionPerformed"/>
+              </Events>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane3">
               <AuxValues>
@@ -751,6 +744,21 @@
                 </Component>
               </SubComponents>
             </Container>
+            <Component class="javax.swing.JLabel" name="playlistsProgramaLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Programa:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="playlistProgramaComboBox">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="this.programasComboBoxModel" type="code"/>
+                </Property>
+              </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+              </AuxValues>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="discosTab">
