--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -104,7 +104,7 @@
                                   <Component id="frecuenciaEmisoraShow" min="-2" max="-2" attributes="0"/>
                                   <Component id="nombreEmisoraShow" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="0" pref="650" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="728" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -348,7 +348,7 @@
                                               </Group>
                                           </Group>
                                       </Group>
-                                      <EmptySpace min="0" pref="10" max="32767" attributes="0"/>
+                                      <EmptySpace min="0" pref="85" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
@@ -588,7 +588,7 @@
                           <Component id="verCancionesPlaylistLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jSeparator7" alignment="0" max="32767" attributes="0"/>
                           <Component id="playlistsCombo" max="32767" attributes="0"/>
-                          <Component id="jScrollPane4" pref="298" max="32767" attributes="0"/>
+                          <Component id="jScrollPane4" pref="309" max="32767" attributes="0"/>
                           <Group type="102" alignment="1" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="playlistNombre" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -603,10 +603,10 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jScrollPane3" pref="534" max="32767" attributes="0"/>
+                          <Component id="jScrollPane3" pref="617" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="listaPlaylistsLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="449" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="518" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -814,7 +814,7 @@
                                       <EmptySpace max="32767" attributes="0"/>
                                   </Group>
                                   <Group type="102" attributes="0">
-                                      <Component id="jScrollPane5" pref="466" max="32767" attributes="0"/>
+                                      <Component id="jScrollPane5" pref="552" max="32767" attributes="0"/>
                                       <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -1045,7 +1045,7 @@
                                   </Group>
                                   <Group type="102" attributes="0">
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="jScrollPane2" pref="497" max="32767" attributes="0"/>
+                                      <Component id="jScrollPane2" pref="589" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -1350,59 +1350,65 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="actualizarCancionArchivoLabel" min="-2" pref="146" max="-2" attributes="0"/>
-                          <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="cancionArchivoAlbumLabel" alignment="0" min="-2" pref="52" max="-2" attributes="0"/>
-                                      <Component id="cancionArchivoNombreLabel" alignment="0" min="-2" pref="52" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Component id="cancionArchivoCantanteLabel" min="-2" pref="52" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" attributes="0">
-                                      <Component id="cancionArchivoAlbumInput" min="-2" pref="251" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
-                                      <Component id="cancionArchivoDuracionLabel" min="-2" pref="52" max="-2" attributes="0"/>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="cancionArchivoDuracionInput" min="-2" pref="251" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="cancionArchivoNombreInput" alignment="0" min="-2" pref="251" max="-2" attributes="0"/>
-                                          <Component id="cancionArchivoCantanteInput" alignment="0" min="-2" pref="251" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="cargarCancionesArchivoLabel" min="-2" max="-2" attributes="0"/>
-                                          <Group type="102" attributes="0">
-                                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                                  <Component id="cancionArchivoGeneroLabel" pref="52" max="32767" attributes="0"/>
-                                                  <Component id="cancionArchivoPathLabel" max="32767" attributes="0"/>
-                                              </Group>
-                                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                                  <Component id="cancionArchivoGeneroInput" pref="251" max="32767" attributes="0"/>
-                                                  <Component id="cancionArchivoPathInput" max="32767" attributes="0"/>
-                                              </Group>
-                                          </Group>
-                                          <Component id="jSeparator14" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
-                                          <Component id="cargarCancionesArchivoPathInput" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="cargarCancionesArchivoBtn" alignment="0" pref="321" max="32767" attributes="0"/>
-                                      </Group>
-                                  </Group>
-                              </Group>
-                          </Group>
                           <Component id="jLabel5" alignment="0" min="-2" pref="213" max="-2" attributes="0"/>
-                          <Component id="jSeparator9" alignment="0" min="-2" pref="213" max="-2" attributes="0"/>
                           <Component id="jSeparator13" alignment="0" min="-2" pref="155" max="-2" attributes="0"/>
                           <Component id="agregarCancionArchivoBtn" alignment="0" min="-2" pref="321" max="-2" attributes="0"/>
                           <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                               <Component id="verInformacionCancionArchivoBtn" alignment="0" pref="321" max="32767" attributes="0"/>
                               <Component id="actualizarCancionArchivoComboBox" alignment="0" max="32767" attributes="0"/>
                           </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                  <Component id="jScrollPane11" max="32767" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Group type="103" groupAlignment="1" attributes="0">
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="cancionArchivoAlbumLabel" alignment="0" min="-2" pref="52" max="-2" attributes="0"/>
+                                              <Component id="cancionArchivoNombreLabel" alignment="0" min="-2" pref="52" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Component id="cancionArchivoCantanteLabel" min="-2" pref="52" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Group type="102" attributes="0">
+                                              <Component id="cancionArchivoAlbumInput" min="-2" pref="251" max="-2" attributes="0"/>
+                                              <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
+                                              <Component id="cancionArchivoDuracionLabel" min="-2" pref="52" max="-2" attributes="0"/>
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <Component id="cancionArchivoDuracionInput" min="-2" pref="251" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="cancionArchivoNombreInput" alignment="0" min="-2" pref="251" max="-2" attributes="0"/>
+                                                  <Component id="cancionArchivoCantanteInput" alignment="0" min="-2" pref="251" max="-2" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                  <Component id="cargarCancionesArchivoLabel" min="-2" max="-2" attributes="0"/>
+                                                  <Group type="102" attributes="0">
+                                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                          <Component id="cancionArchivoGeneroLabel" pref="52" max="32767" attributes="0"/>
+                                                          <Component id="cancionArchivoPathLabel" max="32767" attributes="0"/>
+                                                      </Group>
+                                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                          <Component id="cancionArchivoGeneroInput" pref="251" max="32767" attributes="0"/>
+                                                          <Component id="cancionArchivoPathInput" max="32767" attributes="0"/>
+                                                      </Group>
+                                                  </Group>
+                                                  <Component id="jSeparator14" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
+                                                  <Component id="cargarCancionesArchivoPathInput" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="cargarCancionesArchivoBtn" alignment="0" pref="321" max="32767" attributes="0"/>
+                                              </Group>
+                                          </Group>
+                                      </Group>
+                                  </Group>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jSeparator9" min="-2" pref="213" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <EmptySpace pref="135" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -1412,8 +1418,11 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel5" min="-2" pref="29" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jSeparator9" min="-2" pref="10" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="149" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jSeparator9" min="-2" pref="10" max="-2" attributes="0"/>
+                          <Component id="jScrollPane11" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="cancionArchivoAlbumLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="cancionArchivoAlbumInput" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -1456,7 +1465,7 @@
                           <Component id="cargarCancionesArchivoBtn" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="verInformacionCancionArchivoBtn" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="163" max="32767" attributes="0"/>
+                      <EmptySpace pref="179" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -1567,6 +1576,22 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cargarCancionesArchivoBtnActionPerformed"/>
               </Events>
             </Component>
+            <Container class="javax.swing.JScrollPane" name="jScrollPane11">
+              <AuxValues>
+                <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+              </AuxValues>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+              <SubComponents>
+                <Component class="javax.swing.JList" name="cancionesArchivoList">
+                  <Properties>
+                    <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
+                      <StringArray count="0"/>
+                    </Property>
+                  </Properties>
+                </Component>
+              </SubComponents>
+            </Container>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="jPanel1">
@@ -1607,7 +1632,7 @@
                           </Group>
                           <Component id="agregarCancionLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="67" max="32767" attributes="0"/>
+                      <EmptySpace pref="150" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="seleccionarDiscoLabel" min="-2" max="-2" attributes="0"/>
                           <Component id="jScrollPane6" max="32767" attributes="0"/>
@@ -1838,7 +1863,7 @@
                           <Group type="102" attributes="0">
                               <Component id="cancionPorCantanteInput" min="-2" pref="301" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="botonConsultarCancionesCantante" pref="106" max="32767" attributes="0"/>
+                              <Component id="botonConsultarCancionesCantante" pref="200" max="32767" attributes="0"/>
                           </Group>
                           <Component id="jSeparator18" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
@@ -1977,7 +2002,7 @@
                           <Component id="locutoresDeEmisoraLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jSeparator19" alignment="0" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="64" max="32767" attributes="0"/>
+                      <EmptySpace pref="158" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="programasDeEmisoraLabel" min="-2" max="-2" attributes="0"/>
                           <Component id="jSeparator20" max="32767" attributes="0"/>
