--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -2261,7 +2261,7 @@
             </Component>
             <Component class="javax.swing.JButton" name="botonReproducir">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jButton1"/>
+                <Property name="text" type="java.lang.String" value="Reproducir"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonReproducirActionPerformed"/>
